# Roomba-The_turtlebot_walker

./: LICENSE  README.md  run_cppcheck.sh  run_cpplint.sh
launch/: roomba_bringup_launch.py
results/: cppcheck.txt  cpplint.txt
results/rosbag_recording/: metadata.yaml  rosbag_recording_0.db3
src/roomba/: CMakeLists.txt  package.xml
src/roomba/src/: walker.cpp
